--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "@material-ui/icons": "^4.11.2",
     "@urql/exchange-graphcache": "^4.0.0",
     "graphql": "^15.5.0",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.1.3",
+    "next-urql": "^3.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-is": "^17.0.2",
     "urql": "^2.0.2"
   },
   "devDependencies": {
