--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon",
-    "build": "tsc -p .",
-    "create:migration": "npx mikro-orm migration:create"
+    "build": "tsc -p ."
   },
   "nodemonConfig": {
     "ignore": [
@@ -27,37 +26,32 @@
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.22.3",
     "@types/node": "^14.14.37",
-    "@types/redis": "^2.8.28",
+    "@types/nodemailer": "^6.4.1",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.1",
-    "@mikro-orm/core": "^4.5.1",
-    "@mikro-orm/migrations": "^4.5.1",
-    "@mikro-orm/postgresql": "^4.5.1",
     "apollo-server-express": "^2.22.2",
     "argon2": "^0.27.2",
     "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "graphql": "^15.5.0",
+    "ioredis": "^4.26.0",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
-    "redis": "^3.1.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.32",
+    "uuid": "^8.3.2"
   },
   "resolutions": {
     "knex": "0.21.6"
