--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,9 +24,10 @@
     "baseUrl": "./src",
     "paths": {
       "@reddit/backend/resolvers/*": ["resolvers/*"],
-      "@reddit/backend/entities/*": ["entities/*"]
+      "@reddit/backend/entities/*": ["entities/*"],
+      "@reddit/backend/utils/*": ["utils/*"]
     }
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.tsx", "./src/**/*.ts"]
+  "include": ["./src/**/*.tsx", "./src/**/*.ts", "src/ormconfig.js"]
 }
