--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@urql/exchange-graphcache": "^4.0.0",
     "graphql": "^15.5.0",
     "isomorphic-unfetch": "^3.1.0",
